#  Copyright Matthias Troyer and Synge Todo 2009 - 2012.
# Modified 2020 by Leon Freitag for QCMaquis distribution
#  Distributed under the Boost Software License, Version 1.0.
#      (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)
add_subdirectory(accumulator)
add_subdirectory(hdf5)
add_subdirectory(ngs)
add_subdirectory(numeric)
add_subdirectory(osiris)
add_subdirectory(parameter)
add_subdirectory(parser)
add_subdirectory(random)
add_subdirectory(utility)
